# lua-stdlib

./: CMakeLists.txt  dist.info
lib/lua/: std.lua
